--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 
 
-    <title>Your Name - Resume</title>
+    <title>22IT024 BOOTSTRAP</title>
   </head>
   <body>
     <!-- Navigation Bar -->
